[package]
name = "node-cli"
version = "3.0.0-dev"
authors = ["Shugetsu Software <shugetsu@shugetsu.space>", "Parity Technologies <admin@parity.io>"]
description = "MuriChain Implementation in Substrate."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "murichain-node"
homepage = "https://muri.moe"
repository = "https://github.com/ShugetsuSoft/MuriChain/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "murichain-node"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.126", features = ["derive"] }
futures = "0.3.16"
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }

# primitives
sp-authority-discovery = { version = "4.0.0-dev", path = "../../substrate/primitives/authority-discovery" }
sp-consensus-babe = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/babe" }
grandpa-primitives = { version = "4.0.0-dev", package = "sp-finality-grandpa", path = "../../substrate/primitives/finality-grandpa" }
sp-core = { version = "4.0.0-dev", path = "../../substrate/primitives/core" }
sp-runtime = { version = "4.0.0-dev", path = "../../substrate/primitives/runtime" }
sp-timestamp = { version = "4.0.0-dev", path = "../../substrate/primitives/timestamp" }
sp-authorship = { version = "4.0.0-dev", path = "../../substrate/primitives/authorship" }
sp-inherents = { version = "4.0.0-dev", path = "../../substrate/primitives/inherents" }
sp-keyring = { version = "4.0.0-dev", path = "../../substrate/primitives/keyring" }
sp-keystore = { version = "0.10.0-dev", path = "../../substrate/primitives/keystore" }
sp-consensus = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/common" }
sp-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/primitives/transaction-pool" }
sp-transaction-storage-proof = { version = "4.0.0-dev", path = "../../substrate/primitives/transaction-storage-proof" }

# client dependencies
sc-client-api = { version = "4.0.0-dev", path = "../../substrate/client/api" }
sc-chain-spec = { version = "4.0.0-dev", path = "../../substrate/client/chain-spec" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate/client/consensus/common" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool/api" }
sc-network = { version = "0.10.0-dev", path = "../../substrate/client/network" }
sc-consensus-slots = { version = "0.10.0-dev", path = "../../substrate/client/consensus/slots" }
sc-consensus-babe = { version = "0.10.0-dev", path = "../../substrate/client/consensus/babe" }
sc-consensus-uncles = { version = "0.10.0-dev", path = "../../substrate/client/consensus/uncles" }
grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", path = "../../substrate/client/finality-grandpa" }
sc-rpc = { version = "4.0.0-dev", path = "../../substrate/client/rpc" }
sc-basic-authorship = { version = "0.10.0-dev", path = "../../substrate/client/basic-authorship" }
sc-service = { version = "0.10.0-dev", default-features = false, path = "../../substrate/client/service" }
sc-telemetry = { version = "4.0.0-dev", path = "../../substrate/client/telemetry" }
sc-executor = { version = "0.10.0-dev", path = "../../substrate/client/executor" }
sc-authority-discovery = { version = "0.10.0-dev", path = "../../substrate/client/authority-discovery" }
sc-sync-state-rpc = { version = "0.10.0-dev", path = "../../substrate/client/sync-state-rpc" }

# frame dependencies
frame-system = { version = "4.0.0-dev", path = "../../substrate/frame/system" }
pallet-transaction-payment = { version = "4.0.0-dev", path = "../../substrate/frame/transaction-payment" }
pallet-im-online = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/im-online" }

# node-specific dependencies
node-runtime = { version = "3.0.0-dev", path = "../runtime" }
node-rpc = { version = "3.0.0-dev", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-executor = { version = "3.0.0-dev", path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.10.0-dev", optional = true, path = "../../substrate/client/cli" }
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
node-inspect = { version = "0.9.0-dev", optional = true, path = "../inspect" }
try-runtime-cli = { version = "0.10.0-dev", optional = true, path = "../../substrate/utils/frame/try-runtime/cli" }

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "3.0.0-dev", path = "../executor", features = [
	"wasmtime",
] }
sc-cli = { version = "0.10.0-dev", optional = true, path = "../../substrate/client/cli", features = [
	"wasmtime",
] }
sc-service = { version = "0.10.0-dev", default-features = false, path = "../../substrate/client/service", features = [
	"wasmtime",
] }
sp-trie = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/trie", features = [
	"memory-tracker",
] }

[dev-dependencies]
sc-keystore = { version = "4.0.0-dev", path = "../../substrate/client/keystore" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate/client/consensus/common" }
sc-consensus-babe = { version = "0.10.0-dev", path = "../../substrate/client/consensus/babe" }
sc-consensus-epochs = { version = "0.10.0-dev", path = "../../substrate/client/consensus/epochs" }
sc-service-test = { version = "2.0.0", path = "../../substrate/client/service/test" }
futures = "0.3.16"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"
async-std = { version = "1.6.5", features = ["attributes"] }
soketto = "0.4.2"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.9.0-dev", optional = true, path = "../inspect" }
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
substrate-build-script-utils = { version = "3.0.0", optional = true, path = "../../substrate/utils/build-script-utils" }
substrate-frame-cli = { version = "4.0.0-dev", optional = true, path = "../../substrate/utils/frame/frame-utilities-cli" }
try-runtime-cli = { version = "0.10.0-dev", optional = true, path = "../../substrate/utils/frame/try-runtime/cli" }
sc-cli = { version = "0.10.0-dev", path = "../../substrate/client/cli", optional = true }

[features]
default = [ "cli" ]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-runtime/try-runtime", "try-runtime-cli"]
