[package]
name = "node-inspect"
version = "0.9.0-dev"
authors = ["Shugetsu Software <shugetsu@shugetsu.space>", "Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://muri.moe"
repository = "https://github.com/ShugetsuSoft/MuriChain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99"
sc-cli = { version = "0.10.0-dev", path = "../../substrate/client/cli" }
sc-client-api = { version = "4.0.0-dev", path = "../../substrate/client/api" }
sc-executor = { version = "0.10.0-dev", path = "../../substrate/client/executor" }
sc-service = { version = "0.10.0-dev", default-features = false, path = "../../substrate/client/service" }
sp-blockchain = { version = "4.0.0-dev", path = "../../substrate/primitives/blockchain" }
sp-core = { version = "4.0.0-dev", path = "../../substrate/primitives/core" }
sp-runtime = { version = "4.0.0-dev", path = "../../substrate/primitives/runtime" }
structopt = "0.3.8"
