[package]
name = "node-rpc-client"
version = "2.0.0"
authors = ["Shugetsu Software <shugetsu@shugetsu.space>", "Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://muri.moe"
repository = "https://github.com/ShugetsuSoft/MuriChain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
jsonrpc-core-client = { version = "18.0.0", default-features = false, features = [
    "http",
] }
node-primitives = { version = "2.0.0", path = "../primitives" }
sp-tracing = { version = "4.0.0-dev", path = "../../substrate/primitives/tracing" }
sc-rpc = { version = "4.0.0-dev", path = "../../substrate/client/rpc" }
