[package]
name = "node-testing"
version = "3.0.0-dev"
authors = ["Shugetsu Software <shugetsu@shugetsu.space>", "Parity Technologies <admin@parity.io>"]
description = "Test utilities for Substrate node."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://muri.moe"
repository = "https://github.com/ShugetsuSoft/MuriChain/"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-service = { version = "0.10.0-dev", features = [
    "test-helpers",
    "db",
], path = "../../substrate/client/service" }
sc-client-db = { version = "0.10.0-dev", path = "../../substrate/client/db/", features = [
    "kvdb-rocksdb",
    "parity-db",
] }
sc-client-api = { version = "4.0.0-dev", path = "../../substrate/client/api/" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate/client/consensus/common" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-keyring = { version = "4.0.0-dev", path = "../../substrate/primitives/keyring" }
node-executor = { version = "3.0.0-dev", path = "../executor" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "3.0.0-dev", path = "../runtime" }
sp-core = { version = "4.0.0-dev", path = "../../substrate/primitives/core" }
sp-io = { version = "4.0.0-dev", path = "../../substrate/primitives/io" }
sp-runtime = { version = "4.0.0-dev", path = "../../substrate/primitives/runtime" }
sc-executor = { version = "0.10.0-dev", path = "../../substrate/client/executor", features = [
    "wasmtime",
] }
sp-consensus = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/common" }
frame-system = { version = "4.0.0-dev", path = "../../substrate/frame/system" }
substrate-test-client = { version = "2.0.0", path = "../../substrate/test-utils/client" }
pallet-transaction-payment = { version = "4.0.0-dev", path = "../../substrate/frame/transaction-payment" }
sp-api = { version = "4.0.0-dev", path = "../../substrate/primitives/api" }
sp-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/timestamp" }
sp-block-builder = { version = "4.0.0-dev", path = "../../substrate/primitives/block-builder" }
sc-block-builder = { version = "0.10.0-dev", path = "../../substrate/client/block-builder" }
sp-inherents = { version = "4.0.0-dev", path = "../../substrate/primitives/inherents" }
sp-blockchain = { version = "4.0.0-dev", path = "../../substrate/primitives/blockchain" }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"
