[package]
name = 'pallet-muridata'
version = '1.0.0'
description = 'Main logic for MuriData'
authors = ['Shugetsu Software <https://github.com/ShugetsuSoft>', 'Rorical <https://github.com/Rorical>']
homepage = 'https://muri.moe'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/ShugetsuSoft/MuriChain/'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/std" }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/runtime" }
# Needed for type-safe access to storage DB.
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/support" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/system" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/benchmarking", optional = true }

[dev-dependencies]
sp-core = { version = "4.0.0-dev", path = "../../substrate/primitives/core" }
sp-std = { version = "4.0.0-dev", path = "../../substrate/primitives/std" }
sp-io = { version = "4.0.0-dev", path = "../../substrate/primitives/io" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]